msm8916-common: Haxx for faceunlock (2/2)
- The last 32 bit libfacenet.so from google appears to be incompatible
  with current protobuf libs
- Add up the pre-O libprotobuf-cpp lib and shim libfacenet.so with it,
  using LD_SHIM_LIBS

Change-Id: I3b61751d1b8adb9d9c7876f08586d947178ff52f
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -42,6 +42,8 @@ on early-init
     write /sys/class/leds/lcd-backlight/trigger "backlight"
 
 on init
+    export LB_SHIM_LIBS /system/lib/libfacenet.so|libprotobuf-cpp-haxx.so
+
     # Set permissions for persist partition
     mkdir /persist 0771 system system
 
@@ -56,6 +58,7 @@ on fs
 
 # msm specific files that need to be created on /data
 on post-fs-data
+
     mount none /system/vendor/lib/libfacenet-32.so /system/lib/libfacenet.so bind
     mkdir /data/fdAlbum 0770 camera camera
     mkdir /data/misc/camera 0770 camera camera
